chore: applied suggestions

--- a/src/content/docs/es/guides/integrations-guide/netlify.mdx
+++ b/src/content/docs/es/guides/integrations-guide/netlify.mdx
@@ -25,7 +25,7 @@ Si deseas [usar renderizado del lado del servidor (SSR)](/es/guides/server-side-
 
 ## Instalación
 
-Agrega el adaptador de Netlify para habilitar SSR en tu proyecto de Astro con el siguiente comando `astro add`. Esto instalará el adaptador y hará los cambios apropiados en tu archivo `astro.config.mjs` en un solo paso.
+Agrega el adaptador de Netlify para habilitar SSR en tu proyecto de Astro con el comando `astro add`. Esto instalará el adaptador y hará los cambios apropiados en tu archivo `astro.config.mjs` en un solo paso.
 
 ```sh
 # Usando NPM
@@ -44,7 +44,6 @@ Si prefieres instalar el adaptador manualmente, completa los siguientes dos paso
       npm install @astrojs/netlify
     ```
 
-2.  Add two new lines to your `astro.config.mjs` project configuration file.
 2.  Agrega dos nuevas líneas a tu archivo de configuración `astro.config.mjs`:
 
     ```js ins={3, 6-7}
@@ -62,7 +61,6 @@ Si prefieres instalar el adaptador manualmente, completa los siguientes dos paso
 
 Netlify tiene dos plataformas serverless, Funciones Netlify y [Funciones Edge experimentales de Netlify](https://docs.netlify.com/netlify-labs/experimental-features/edge-functions/#app). Con Funciones Edge tu código se distribuye más cerca de tus usuarios, reduciendo la latencia.
 
-To deploy with Edge Functions, use `netlify/edge-functions` in the Astro config file instead of `netlify/functions`.
 Para desplegar con Funciones Edge, usa `netlify/edge-functions` en el archivo de configuración de Astro en lugar de `netlify/functions`.
 
 ```js ins={3}
@@ -96,7 +94,7 @@ Para configurar este adaptador, pasa un objeto a la llamada de función `netlify
 
 ### dist
 
-Construimos el directorio `dist` en la base de tu proyecto. Para cambiar esto, usa la opción `dist`:
+Construimos el directorio `dist` en la raíz de tu proyecto. Para cambiar esto, usa la opción `dist`:
 
 ```js
 // astro.config.mjs
@@ -143,7 +141,7 @@ Los constructores bajo demanda solo están disponibles con el adaptador `@astroj
 
 Las Funciones de Netlify requieren que los datos binarios en el `body` estén codificados en base64. El adaptador `@astrojs/netlify/functions` maneja esto automáticamente en función de la cabecera `Content-Type`.
 
-Nosotros checamos los tipos mime comunes para archivos de audio, imagen y video. Para incluir tipos mime específicos que deben tratarse como datos binarios, incluye la opción `binaryMediaTypes` con una lista de tipos mime binarios.
+Verificamos los tipos mime comunes para archivos de audio, imagen y video. Para incluir tipos mime específicos que deben tratarse como datos binarios, incluye la opción `binaryMediaTypes` con una lista de tipos mime binarios.
 
 ```js {12}
 // src/pages/image.jpg.ts
