--- a/src/content/docs/en/guides/baas/google-firebase.mdx
+++ b/src/content/docs/en/guides/baas/google-firebase.mdx
@@ -13,7 +13,7 @@ import FileTree from '~/components/FileTree.astro'
 
 ## Adding authentication with Firebase
 
-### Preqrequisites
+### Prerequisites
 
 - A Firebase project with a web app configured: Check the [Firebase docs](https://firebase.google.com/docs/web/setup) for more information on how to create a new project and configure a web app.
 - An Astro project with server side rendering (SSR) enabled: Check our [server side rendering](/en/guides/server-side-rendering/#enabling-ssr-in-your-project) page for more information.
@@ -87,8 +87,31 @@ To connect Astro with Firebase, install the following packages using the single 
   </Fragment>
 </PackageManagerTabs>
 
-Next, create a folder called `firebase` in the `src/` directory and create two new files called `client.ts` and `server.ts`  inside of it. This two file will contain the code to initialize Firebase on the client and server side of your app.
+Next, create a folder named `firebase` in the `src/` directory. 
+Inside the firebase folder create two files, `client.ts` and `server.ts`.
 
+The `client.ts` file will contain the code to initialize Firebase in the client using the web app credentials.
+
+```ts title="src/firebase/client.ts"
+import { initializeApp } from "firebase/app";
+
+const firebaseConfig = {
+  apiKey: "my-public-api-key",
+  authDomain: "astro-firebase.firebaseapp.com",
+  projectId: "astro-firebase",
+  storageBucket: "astro-firebase.appspot.com",
+  messagingSenderId: "469295531959",
+  appId: "1:469295531959:web:20b9159723f8113f2744f2",
+};
+
+export const app = initializeApp(firebaseConfig);
+```
+
+:::note
+Do not forget to replace the `firebaseConfig` object with your own web app credentials.
+:::
+
+The `server.ts` file will contain the code to initialize Firebase in the server using the project credentials. Since this file will be used in the server, we will use the Firebase Admin SDK instead of the Firebase SDK.
 
 ```ts title="src/firebase/server.ts"
 import type { ServiceAccount } from "firebase-admin";
@@ -99,9 +122,8 @@ const serviceAccount = {
   project_id: import.meta.env.FIREBASE_PROJECT_ID,
   private_key_id: import.meta.env.FIREBASE_PRIVATE_KEY_ID,
   private_key: import.meta.env.FIREBASE_PRIVATE_KEY,
-  client_email:
-    "firebase-adminsdk@astro-auth-6cc43.iam.gserviceaccount.com",
-  client_id: "100068165142027748424",
+  client_email: "example@astro.build",
+  client_id: "100068165101237748424",
   auth_uri: "https://accounts.google.com/o/oauth2/auth",
   token_uri: "https://oauth2.googleapis.com/token",
   auth_provider_x509_cert_url: "https://www.googleapis.com/oauth2/v1/certs",
@@ -114,17 +136,170 @@ export const app = initializeApp({
 });
 ```
 
-```ts title="src/firebase/client.ts"
-import { initializeApp } from "firebase/app";
+:::note
+Do not forget to replace the `serviceAccount` object with your own project credentials.
+:::
 
-const firebaseConfig = {
-  apiKey: "AIzaSyD8bSsEcYrV7Whgf8L6UD_P4M9SR_jb81k",
-  authDomain: "astro-firebase.firebaseapp.com",
-  projectId: "astro-firebase",
-  storageBucket: "astro-firebase.appspot.com",
-  messagingSenderId: "469295571959",
-  appId: "1:469295571959:web:20b9159723f8113f2744f2",
+Finally, your root directory should now include these new files:
+
+<FileTree title="Project Structure">
+- src
+  - env.d.ts
+  - firebase
+    - **client.ts**
+    - **server.ts**
+- .env
+- astro.config.mjs
+- package.json
+</FileTree>
+
+### Setting up server endpoints
+
+To set up authentication in Astro, we will use [Astro server endpoints](/en/core-concepts/endpoints/) to create three server endpoints:
+
+- `GET /api/auth/signin` - to sign in a user
+- `GET /api/auth/signout` - to sign out a user
+- `POST /api/auth/register` - to register a user
+
+To better organize our endpoints, we will create a folder named `auth` inside the `api` folder. Inside the `auth` folder, we will store all the endpoints related to authentication.
+
+Create a file named `signin.ts` inside the `pages/api/auth/` folder. This file will contain the code to sign in a user using Firebase.
+
+```ts title="src/pages/api/auth/signin.ts"
+import type { APIRoute } from "astro";
+import { app } from "../../../lib/firebase/server";
+import { getAuth } from "firebase-admin/auth";
+
+export const get: APIRoute = async ({ request, cookies, redirect }) => {
+  const auth = getAuth(app);
+
+  /* Get token from request headers */
+  const idToken = request.headers.get("Authorization")?.split("Bearer ")[1];
+  if (!idToken) {
+    return new Response(
+      JSON.stringify({
+        error: "No token found",
+      }),
+      { status: 401 }
+    );
+  }
+
+  /* Verify the token */
+  const decodedToken = await auth.verifyIdToken(idToken).catch(() => null);
+
+  if (!decodedToken) {
+    return new Response(
+      JSON.stringify({
+        error: "Invalid token",
+      }),
+      { status: 401 }
+    );
+  }
+
+  const fiveDays = 60 * 60 * 24 * 5 * 1000;
+
+  /* Create and set session cookie */
+  const sessionCookie = await auth.createSessionCookie(idToken, {
+    expiresIn: fiveDays,
+  });
+
+  cookies.set("session", sessionCookie, {
+    path: "/",
+    // more options
+  });
+
+  return redirect("/dashboard");
 };
-
-export const app = initializeApp(firebaseConfig);
 ```
+
+:::note
+This is a basic implementation of the login endpoint. You can add more logic to this endpoint to suit your needs.
+:::
+
+Next, create a file named `signout.ts` inside the `auth` folder. This file will contain the code to log out a user using Firebase.
+
+```ts title="src/pages/api/auth/signout.ts"
+import type { APIRoute } from "astro";
+
+export const get: APIRoute = async ({ redirect, cookies }) => {
+  cookies.delete("session", {
+    path: "/",
+  });
+  return redirect("/signin");
+};
+```
+
+:::note
+This is a basic implementation of the logout endpoint. You can add more logic to this endpoint to suit your needs.
+:::
+
+Next, create a file named `register.ts` inside the `auth` folder. This file will contain the code to register a user using Firebase.
+
+```ts title="src/pages/api/auth/register.ts"
+import type { APIRoute } from "astro";
+import { getAuth } from "firebase-admin/auth";
+import { app } from "../../../lib/firebase/server";
+
+export const post: APIRoute = async ({ request, redirect }) => {
+  const auth = getAuth(app);
+
+  /* Get form data */
+  const formData = await request.formData();
+  const email = formData.get("email")?.toString();
+  const password = formData.get("password")?.toString();
+  const name = formData.get("name")?.toString();
+
+  if (!email || !password || !name) {
+    return new Response(
+      JSON.stringify({
+        error: "Missing data",
+      }),
+      { status: 400 }
+    );
+  }
+
+  /* Create user */
+  try {
+    await auth.createUser({
+      email,
+      password,
+      displayName: name,
+    });
+  } catch (error: any) {
+    return new Response(
+      JSON.stringify({
+        error: error.code,
+      }),
+      { status: 400 }
+    );
+  }
+  return redirect("/signin");
+};
+```
+
+:::note
+This is a basic implementation of the register endpoint. You can add more logic to this endpoint to suit your needs.
+:::
+
+Finally, your project directory should now include these new files:
+
+<FileTree title="Project Structure">
+- src
+  - env.d.ts
+  - firebase
+    - client.ts
+    - server.ts
+  - pages
+    - api
+      - auth
+        - **login.ts**
+        - **logout.ts**
+        - **register.ts**
+- .env
+- astro.config.mjs
+- package.json
+</FileTree>
+
+### Building the UI
+
+TODO
