--- a/src/content/docs/en/guides/troubleshooting.mdx
+++ b/src/content/docs/en/guides/troubleshooting.mdx
@@ -145,13 +145,14 @@ export default defineConfig({
   vite: {
     ssr: {
       noExternal: [
-        '@astrojs/package-a',
-        '@astrojs/package-b',
-        '@astrojs/package-n',
+        '@astrojs/vue',
+        'astro-component-lib',
       ]
     }
   }
 })
+```
+
 ### Using `<head>` in a component
 
 In Astro, using a `<head>` tag works like any other HTML tag: it does not get moved to the top of the page or merged with the existing `<head>`. Because of this, you usually only want to include one `<head>` tag throughout a page. We recommend writing that single `<head>` and its contents in a [layout component](/en/core-concepts/layouts/).
