--- a/src/content/docs/es/guides/migrate-to-astro/from-pelican.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-pelican.mdx
@@ -17,7 +17,7 @@ Pelican y Astro comparten algunas similitudes que te ayudarán a migrar tu proye
 
 - Pelican y Astro son generadores de sitios estáticos, idealmente adecuados para [sitios web centrados en contenido](/es/concepts/why-astro/#enfocado-en-el-contenido) como blogs.
 
-- Pelican y Astro tienen soport incorporado para [escribir Markdown](/es/guides/content/#autoría-mdx), incluyendo propiedades frontmatter YAML para metadatos de página. Sin embargo, Astro tiene muy pocas propiedades frontmatter reservadas en comparación con Pelican. Aunque muchas de tus propiedades frontmatter existentes en Pelican no serán "especiales" en Astro, puedes continuar usando tus archivos Markdown existentes y valores frontmatter.
+- Pelican y Astro tienen soporte incorporado para [escribir Markdown](/es/guides/content/#autoría-mdx), incluyendo propiedades frontmatter YAML para metadatos de página. Sin embargo, Astro tiene muy pocas propiedades frontmatter reservadas en comparación con Pelican. Aunque muchas de tus propiedades frontmatter existentes en Pelican no serán "especiales" en Astro, puedes continuar usando tus archivos Markdown existentes y valores frontmatter.
 
 ## Principales diferencias entre Pelican y Astro
 
@@ -25,7 +25,7 @@ Cuando reconstruyas tu sitio Pelican a Astro, notarás algunas diferencias impor
 
 - Pelican admite escribir contenido en Markdown y reStructured Text (`.rst`). Astro admite [crear páginas a partir de archivos Markdown y MDX](/es/guides/content/), pero no admite reStructured Text.
 
-- Pelican usa archivos HTML y sintaxis Jinja para la plantilla. [Astro syntax](/es/core-concepts/astro-components/) es un subconjunto de HTML similar a JSX. Todo el HTML válido es una sintaxis válida para `.astro`.
+- Pelican usa archivos HTML y sintaxis Jinja para la plantilla. [La sintaxis de Astro](/es/core-concepts/astro-components/) es un subconjunto de HTML similar a JSX. Todo el HTML válido es una sintaxis válida para `.astro`.
 
 - Pelican fue diseñado para construir sitios web ricos en contenido como blogs y tiene algunas características de blog integradas que tendrías que construir tú mismo en Astro. En su lugar, Astro ofrece algunas de estas características incluidas en un [tema de blog oficial](https://github.com/withastro/astro/tree/latest/examples/blog).
 
