Highlight optional props

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -874,7 +874,7 @@ The Markdown component is no longer built into Astro. See how to [import Markdow
 
 ### `<Code />`
 
-```astro
+```astro 'theme="dark-plus"' /wrap\b/ /(inline) \/>/
 ---
 import { Code } from 'astro/components';
 ---
